--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_messaging: ^14.6.3
   flutter_local_notifications: ^14.1.1
   app_settings: ^4.2.0
+  flutter_timezone: ^1.0.7
   http:
   shared_preferences: ^2.1.2
   provider: ^6.0.5
